--- a/style.css
+++ b/style.css
@@ -1,74 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
-*{
+body {
     background-color: hsl(56, 97%, 49%);
     color: #605f54;
     font-family: 'Balsamiq Sans', serif,cursive;
 }
-
-    .logo {
-        text-decoration: none;
-        font-size: 28px;
-        font-weight: 900;
-        text-shadow: 2px 2px 2px white;
-    }
-    .banner li {
-        margin-top: 0px;
-        padding: 20px;
-        float: right;
-        display: inline-block;
-        font-size: 20px;
-    }
-header {
-     font-weight: 700;
-    font-size: 22px;
-}
-.about, .request, .register {
-    text-align:center;
-}
-.image-text h1 {
-    text-align:center;
-    color: white;
-    text-shadow: 2px 2px 2px black;
-    text-transform: uppercase;
-    font-size: 35px;
-    margin: -350px 0px 0px 0px;
-}
-
- footer {
-   padding-left: 20px;
-   padding-bottom: 20px;
- }
-
- input {
-    margin: 0px 10px;
-    padding: 10px;
-    text-align: center;
-}
- .below-image {
-     margin-top: 310px;
-     font-size: 25px;
-     text-align:center;
- }
- .columns {
-     margin-top: 50px;
-     column-count: 3;
-     column-width: 150px;
- }
-.column-left {
-    margin-top: 30px;
-}
-h3 {
-    font-weight: 800px;
-    text-shadow: 2px 2px 2px #cccece;
-}
-.zip {
-    margin-left: 550px;
-}
 a:hover {
     color: #ffb805;
-}
-li {
-    list-style-type: none;
 }
 button{
     padding: 20px;
@@ -78,6 +15,82 @@ button{
     font-weight: 900  
 }
 
-footer p {
+footer {
+    padding-left: 20px;
+    padding-bottom: 20px;
+  }
+  footer p {
     text-align: center;
+}
+  h3 {
+    font-weight: 800px;
+    text-shadow: 2px 2px 2px #cccece;
+}
+
+header {
+     font-weight: 700;
+    font-size: 22px;
+}
+li {
+    list-style-type: none;
+}
+input {
+    margin: 0px 10px;
+    padding: 10px;
+    text-align: center;
+}
+
+
+/* Class Names In Alphabetical Order*/
+.about, .request, .register {
+    text-align:center;
+}
+.below-image {
+    margin-top: 310px;
+    font-size: 25px;
+    text-align:center;
+}
+.columns {
+    margin-top: 50px;
+    column-count: 3;
+    column-width: 150px;
+}
+.column-left {
+   margin-top: 30px;
+}
+
+.header-info li {
+    margin-top: 0px;
+    padding: 20px;
+    float: right;
+    display: inline-block;
+    font-size: 20px;
+}
+.image-text h1 {
+    text-align:center;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    text-transform: uppercase;
+    font-size: 35px;
+    margin: -350px 0px 0px 0px;
+}
+.logo {
+    text-decoration: none;
+    font-size: 28px;
+    font-weight: 900;
+    text-shadow: 2px 2px 2px white;
+}
+#zip{
+    margin-left: 550px;
+}
+
+#banner {
+    position: fixed;
+    text-align: center;
+    width: 100%;
+    background-color: #e8e4dc;
+}
+
+#banner-button {
+    float: right;
 }
